<resources>
    <string name="app_name">井字棋</string>
    <string name="main_title">井字棋小游戏</string>
    <string name="main_button_1">双人模式</string>
    <string name="main_button_2">单人模式</string>
    <string name="mmw1">X的回合</string>
    <string name="mmw2">O的回合</string>
    <string name="maw1">AI的回合</string>
    <string name="maw2">你的回合</string>
    <string name="gend">游戏结束</string>
    <string name="owin">O获胜</string>
    <string name="xwin">X获胜</string>
    <string name="newgame">新游戏</string>
    <string name="endgame">结束游戏</string>
    <string name="even">平局</string>
    <string name="firstplay">先手</string>
    <string name="secondplay">后手</string>
    <string name="rollback">悔棋</string>
    <string name="info">关于井字棋</string>
    <string name="about">\u3000\u3000井字棋是一种在3X3格子上进行的连珠游戏，由于棋盘一般不画边框，格线排成井字故得名。\n\u3000\u3000由分别代表O和X的两个游戏者轮流在格子里留下标记，任意三个标记形成一条直线，则为获胜。</string>
    <string name="abouttitle">井字棋说明</string>
    <string name="law1">健康游戏忠告</string>
    <string name="law2">抵制不良游戏，拒绝盗版游戏。</string>
    <string name="law3">注意自我保护，谨防受骗上当。</string>
    <string name="law4">适度游戏益脑，沉迷游戏伤身。</string>
    <string name="law5">合理安排时间，享受健康生活。</string>
    <string name="start">开始游戏</string>
    <string name="advice">本游戏适合年满8周岁以上的用户使用:为了您的健康，请合理控制游戏时间。</string>
    <string name="notice">适龄提示</string>
    <string name="noticebody">（1）本游戏是一款回合制棋类游戏，适用于年满8周岁及以上的用户，建议未成年人在家长监护下使用游戏产品。\n\n（2）本游戏没有基于架空的背景故事和世界观。游戏需要两名甚至一名玩家游玩，玩家将在棋盘上进行一定难度的对弈，鼓励玩家思考，有利于玩家提升思维判断能力。游戏有轻微的玩家间竞技对抗内容，没有基于文字和语音的社交系统。\n\n（3）本游戏无实名认证系统和任何付费内容。\n\n（4）本游戏为一款回合制连珠游戏，玩家可以在游玩过程中锻炼思维能力和想象力，游戏中设置了较为强大的电脑玩家，以考验玩家的判断力和抗压能力。鲜艳柔和的美术风格，能够带给玩家积极愉悦的情绪体验。</string>
    <string name="noticebt">确定</string>
</resources>