<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/main_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/main_title"
            android:layout_marginBottom="15dp"
            android:textSize="35sp" />

        <Button
            android:id="@+id/main_button_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_button_1"
            android:textSize="35sp"
            android:layout_marginBottom="15dp"/>

        <Button
            android:id="@+id/main_button_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_button_2"
            android:textSize="35sp"
            android:layout_marginBottom="15dp"
            android:onClick="mainButton2Click"/>
    </LinearLayout>

</LinearLayout>