<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ManVSAIActivity">

    <LinearLayout
        android:id="@+id/choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <Button
            android:id="@+id/first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:onClick="first_play"
            android:text="@string/firstplay"
            android:textSize="35sp" />

        <Button
            android:id="@+id/second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="second_play"
            android:text="@string/secondplay"
            android:textSize="35sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/man_vs_ai_who_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/maw2"
        android:textSize="50sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/man_vs_ai_who_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/maw1"
        android:textSize="50sp"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/man_vs_ai_wait"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="315dp"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/man_vs_ai_place_0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="man_vs_ai_place"
                android:text=""
                android:textSize="50sp"
                tools:text="0" />

            <TextView
                android:id="@+id/man_vs_ai_line_1"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:background="@color/black" />

            <TextView
                android:id="@+id/man_vs_ai_place_5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="man_vs_ai_place"
                android:text=""
                android:textSize="50sp"
                tools:text="5" />

            <TextView
                android:id="@+id/man_vs_ai_line_2"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:background="@color/black" />

            <TextView
                android:id="@+id/man_vs_ai_place_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="man_vs_ai_place"
                android:text=""
                android:textSize="50sp"
                tools:text="1" />

        </LinearLayout>

        <TextView
            android:id="@+id/man_vs_ai_line_3"
            android:layout_width="315dp"
            android:layout_height="5dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="315dp"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/man_vs_ai_place_4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="man_vs_ai_place"
                android:text=""
                android:textSize="50sp"
                tools:text="4" />

            <TextView
                android:id="@+id/man_vs_ai_line_4"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:background="@color/black" />

            <TextView
                android:id="@+id/man_vs_ai_place_8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="man_vs_ai_place"
                android:text=""
                android:textSize="50sp"
                tools:text="8" />

            <TextView
                android:id="@+id/man_vs_ai_line_5"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:background="@color/black" />

            <TextView
                android:id="@+id/man_vs_ai_place_6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="man_vs_ai_place"
                android:text=""
                android:textSize="50sp"
                tools:text="6" />

        </LinearLayout>

        <TextView
            android:id="@+id/man_vs_ai_line_6"
            android:layout_width="315dp"
            android:layout_height="5dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="315dp"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/man_vs_ai_place_3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="man_vs_ai_place"
                android:text=""
                android:textSize="50sp"
                tools:text="3" />

            <TextView
                android:id="@+id/man_vs_ai_line_7"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:background="@color/black" />

            <TextView
                android:id="@+id/man_vs_ai_place_7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="man_vs_ai_place"
                android:text=""
                android:textSize="50sp"
                tools:text="7" />

            <TextView
                android:id="@+id/man_vs_ai_line_8"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:background="@color/black" />

            <TextView
                android:id="@+id/man_vs_ai_place_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="man_vs_ai_place"
                android:text=""
                android:textSize="50sp"
                tools:text="2" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>